--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Proyects/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Proyects/index.html.twig
@@ -35,10 +35,10 @@
     <div class="navigation">
         {{knp_pagination_render(pagination)}}
     </div>
-
+        <br>
         <ul>
         <li>
-            <a href="{{ path('schedule_proyects_new') }}">
+            <a class="button secondary" href="{{ path('schedule_proyects_new') }}">
                 Create a new entry
             </a>
         </li>
