--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
@@ -86,7 +86,7 @@
 
     <section>
         <header>
-            <h3 class="on-left text thin">Job's Schedule </h3>
+            <h2 class="text italic thin"><strong>Schedule</strong>job</h2>
             <nav class="on-right">
                 <a href="{{ path('fos_user_security_logout') }}"><button class="alert">Logout</button></a>
             </nav>
