--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -27,7 +27,7 @@
             <div class="column_4">
                 {{ form_label(form.Init) }}
                 {{ form_errors(form.Init) }}
-                {{ form_widget(form.Init) }}
+                {{ form_widget(form.Init, {'attr': {'class': 'datepicker'}}) }}
             </div>
             <div class="column_1 ">
                 &nbsp;
@@ -35,7 +35,7 @@
             <div class="column_4 ">
                 {{ form_label(form.End) }}
                 {{ form_errors(form.End) }}
-                {{ form_widget(form.End) }}
+                {{ form_widget(form.End, {'attr': {'class': 'datepicker'}}) }}
             </div>        
             <div class="column_4 ">
                 <Button type="submit" />Filter</button>
