--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -39,6 +39,7 @@
             </div>        
             <div class="column_4 ">
                 <Button type="submit" />Filter</button>
+                <a class="button secondary" href="{{path('schedule_jobs')}}">Clean</a>
             </div>              
         {{ form_rest(form) }}
 
