--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
@@ -80,7 +80,7 @@
 				{% if menu == 'schedule_proyects' or menu == 'schedule_proyects_new' or menu == 'schedule_proyects_edit' or menu == 'schedule_proyects_show' %}
 	                <a href="{{path('schedule_proyects')}}" class="active"><span class="icon folder-close"></span>Proyects</a>
 				{% else %}
-	                <a href="{{path('schedule_proyects')}}"><span class="icon folder-close"></span>Proyects</a>
+	                <a href="{{path('schedule_proyects')}}"><span class="icon folder-close"></span>Projects</a>
 				{% endif %}     
 				{% if menu == 'schedule_activitys' or menu == 'schedule_activitys_new' or menu == 'schedule_activitys_edit' or menu == 'schedule_activitys_show' %}
 	                <a href="{{path('schedule_activitys')}}" class="active"><span class="icon exchange"></span>Activities</a>
