--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
@@ -56,6 +56,25 @@
         </div>
     </section>
 
+    <section class="padding bck dark">
+        <div class="row text center book margin-bottom">
+            <div class="column_10 offset_1">
+                <h1 class="color theme">Download</h1>
+                <h3>This is the <span class="text normal color white">Alpha version</span>
+                </h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="offset_2 column_4">
+                <a href="#" onclick="return false;" class="button large anchor "><span class="icon download"></span>Download .Zip File</a>
+            </div>
+            <div class="column_4">
+                <a href="https://github.com/juanber84/Schedule-symfony2" class="button large anchor secondary"><span class="icon github"></span>Source on Github</a>
+            </div>
+        </div>
+    </section>
+
     <section class="padding bck light">
         <div class="row margin-bottom">
             <div class="column_10 offset_1 text center">
