--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Default/schedule.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Default/schedule.html.twig
@@ -4,6 +4,10 @@
     <h4 class="text book inline"><span class="icon laptop color theme "></span> Punch </h4>
     
     <br><br>
+    {% if inittime != '' %}
+        <div class="your-clock"></div>
+    {% endif %}
+    <br><br>
     <form action="" method="post">
     <div class="column_9">
     	<span class="icon folder-close"></span> Proyects <br><br>
