--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/show.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/show.html.twig
@@ -1,7 +1,8 @@
-{% extends '::base.html.twig' %}
+{% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Project</h1>
+
+    <h4 class="text book inline"><span class="icon folder-close color theme "></span> Projects </h4>  
 
     <table class="record_properties">
         <tbody>
