--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/edit.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/edit.html.twig
@@ -1,7 +1,7 @@
-{% extends '::base.html.twig' %}
+{% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Project edit</h1>
+    <h4 class="text book inline"><span class="icon folder-close color theme "></span> Projects edit</h4>
 
     <form action="{{ path('admin_projects_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <input type="hidden" name="_method" value="PUT" />
