--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/index.html.twig
@@ -1,19 +1,18 @@
-{% extends '::base.html.twig' %}
+{% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Project list</h1>
+    <h4 class="text book inline"><span class="icon folder-close color theme "></span> Projects list</h4>
 
     <table class="records_list">
         <thead>
             <tr>
-                <td><input type="checkbox"></td>                <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Name', 'a.name') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Details', 'a.details') }} </th>
+                 <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Name', 'a.name') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Details', 'a.details') }} </th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in pagination %}
             <tr>
-                <td><input type="checkbox"></td>
                 <td><a href="{{ path('admin_projects_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                 <td>{{ entity.details }}</td>
