--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
@@ -55,7 +55,6 @@
         }
 
     </style>
-    {% if inittime != '' %}
         <script>
             $(function() {
                 $( ".datepicker" ).datepicker({ dateFormat: 'yy-mm-dd' });
@@ -65,7 +64,6 @@
                 clock.setTime(3600);
             });
         </script>    
-    {% endif %}
 </head>
 <body data-tuktuk="boxes">
 
@@ -87,10 +85,10 @@
                 <a href="{{path('schedule_jobs')}}" ><span class="icon pencil"></span>Jobs</a>
 			{% endif %}      
 			{% if is_granted('ROLE_ADMIN') %}  	
-				{% if menu == 'schedule_proyects' or menu == 'schedule_proyects_new' or menu == 'schedule_proyects_edit' or menu == 'schedule_proyects_show' %}
-	                <a href="{{path('schedule_proyects')}}" class="active"><span class="icon folder-close"></span>Proyects</a>
+				{% if menu == 'admin_projects' or menu == 'admin_projects_new' or menu == 'admin_projects_edit' or menu == 'admin_projects_show' %}
+	                <a href="{{path('admin_projects')}}" class="active"><span class="icon folder-close"></span>Proyects</a>
 				{% else %}
-	                <a href="{{path('schedule_proyects')}}"><span class="icon folder-close"></span>Projects</a>
+	                <a href="{{path('admin_projects')}}"><span class="icon folder-close"></span>Projects</a>
 				{% endif %}     
 				{% if menu == 'schedule_activitys' or menu == 'schedule_activitys_new' or menu == 'schedule_activitys_edit' or menu == 'schedule_activitys_show' %}
 	                <a href="{{path('schedule_activitys')}}" class="active"><span class="icon exchange"></span>Activities</a>
