--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -8,9 +8,9 @@
             {{ form_errors(form) }}
 
             <div class="column_3">
-                {{ form_label(form.Proyect) }}
-                {{ form_errors(form.Proyect) }}
-                {{ form_widget(form.Proyect) }}
+                {{ form_label(form.Project) }}
+                {{ form_errors(form.Project) }}
+                {{ form_widget(form.Project) }}
             </div>
 
             <div class="column_3">
