--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -46,8 +46,9 @@
         {{ form_end(form) }}
     </div>
 
-    <div class="column_9">
-
+    <div class="column_10">
+        <div class="column_9">
+        
         <table class="records_list">
             <thead>
                 <tr>
@@ -95,6 +96,6 @@
                 </a>
             </li>
         </ul>
-    </div>
+    </div></div>
 
     {% endblock %}
