--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/show.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/show.html.twig
@@ -1,9 +1,14 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-
+    <div class="column_10">
+        <div class="column_9">
     <h4 class="text book inline"><span class="icon folder-close color theme "></span> Projects </h4>  
+        </div>
+    </div>
 
+    <div class="column_10">
+        <div class="column_9">
     <table class="record_properties">
         <tbody>
             <tr>
@@ -40,4 +45,6 @@
         </form>
     </li>
 </ul>
+        </div>
+    </div>
 {% endblock %}
