--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -1,7 +1,12 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
+
+            <div class="column_10">
+                <div class="column_3">
     <h4 class="text book inline"><span class="icon pencil color theme "></span> Jobs list</h4>
+    </div></div>
+
 
     <div class="column_10">
         <form method="post" action="{{path('schedule_jobs')}}">
@@ -48,7 +53,7 @@
 
     <div class="column_10">
         <div class="column_9">
-        
+
         <table class="records_list">
             <thead>
                 <tr>
