--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/new.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/new.html.twig
@@ -1,8 +1,11 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-
+            <div class="column_10">
+                <div class="column_3">
     <h4 class="text book inline"><span class="icon pencil color theme "></span> Jobs creation</h4>    
+        </div></div>
+
 
     <form action="{{ path('schedule_jobs_create') }}" method="post" {{ form_enctype(form) }}>
 
