--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
@@ -104,7 +104,11 @@
 
     <section>
         <header>
-            <h2 class="text italic thin"><strong>Schedule</strong>job</h2>
+            <div class="column_10">
+                <div class="column_3">
+                    <h2 class="text italic thin"><strong>Schedule</strong>job</h2>
+                </div>
+            </div>    
             <nav class="on-right">
                 <a href="{{ path('fos_user_security_logout') }}"><button class="alert">Logout</button></a>
             </nav>
